<resources>
    <string name="app_name">Taschenrechner</string>

    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiply">*</string>
    <string name="btn_divide">:</string>
    <string name="btn_calculate">=</string>
    <string name="btn_delete">&lt;--</string>
    <string name="btn_delete_all">AC</string>
    <string name="btn_bracket_open">(</string>
    <string name="btn_bracket_close">)</string>
    <string name="btn_comma">,</string>
    <string name="btn_more">...</string>
    <string name="btn_zero">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>

    <string name="btn_text_size">14pt</string>
</resources>
